--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,11 @@ __pycache__
 Example_Documents/
 dist/
 Data_Testing_Excels/
-Status_Notes.docx #doesn't handle merge well
+Status_Notes.docx 
 
 # Ignore environment variables file
 .env
-.tmp #temp files
+.tmp
 
 # Ignore build artifacts
 /build
